# financial_research_agent

./: .dockerignore  .gitignore  Dockerfile  README.md  graph.py  main.py  pyproject.toml  requirements.txt  state.py
memory/: store.py
nodes/: analysis.py  confidence.py  deep_flow.py  intent.py  memory_update.py  peer_benchmark.py  quick_flow.py  report.py  scenario.py  validation.py
utils/: llm.py
